<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e9e9e9"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bk"
        android:minHeight="48dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/my_truckinn"
            android:textColor="@color/white"
            android:textSize="@dimen/size_15" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/settings_normal"
            android:scaleType="centerInside" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/my_truckinn_bk"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/headIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/head_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/headIcon"
                    android:layout_centerHorizontal="true"
                    android:text="@string/nick_name_tip"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_20" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@color/white_gray"
                    android:baselineAligned="false"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/total_gride" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical" >

                            <TextView
                                style="@style/white_15_font"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="88" />

                            <TextView
                                style="@style/white_15_font"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/my_gride_tip" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/share" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical" >

                            <TextView
                                style="@style/white_15_font"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="88" />

                            <TextView
                                style="@style/white_15_font"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/my_share_tip" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/collect"
                            android:scaleType="centerInside" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical" >

                            <TextView
                                style="@style/white_15_font"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="88" />

                            <TextView
                                style="@style/white_15_font"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/my_collect_tip" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                style="@style/my_truckinn_relative"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/my_card"
                    style="@style/my_truckinn_img_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/my_card_icon" />

                <TextView
                    style="@style/my_truckinn_page_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/my_card"
                    android:text="@string/myCard" />

                <ImageView
                    style="@style/my_truckinn_img_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <include layout="@layout/right_arrow" />

            <RelativeLayout
                style="@style/my_truckinn_relative"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/my_truck_img"
                    style="@style/my_truckinn_img_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/my_truck_icon" />

                <TextView
                    style="@style/my_truckinn_page_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/my_truck_img"
                    android:text="@string/my_truck" />

                <ImageView
                    style="@style/my_truckinn_img_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <include layout="@layout/right_arrow" />

            <RelativeLayout
                style="@style/my_truckinn_relative"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/my_order_img"
                    style="@style/my_truckinn_img_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/my_order_icon" />

                <TextView
                    style="@style/my_truckinn_page_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/my_order_img"
                    android:text="@string/my_order" />

                <ImageView
                    style="@style/my_truckinn_img_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <RelativeLayout
                style="@style/my_truckinn_relative"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <ImageView
                    android:id="@+id/my_gride_img"
                    style="@style/my_truckinn_img_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/gride_shop_icon" />

                <TextView
                    style="@style/my_truckinn_page_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/my_gride_img"
                    android:text="@string/gride_shop" />

                <ImageView
                    style="@style/my_truckinn_img_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <include layout="@layout/right_arrow" />

            <RelativeLayout
                style="@style/my_truckinn_relative"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/invite_truck_friend_img"
                    style="@style/my_truckinn_img_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/invite_friend_icon" />

                <TextView
                    style="@style/my_truckinn_page_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/invite_truck_friend_img"
                    android:text="@string/invite_friend" />

                <ImageView
                    style="@style/my_truckinn_img_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <include layout="@layout/right_arrow" />

            <RelativeLayout
                style="@style/my_truckinn_relative"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/my_break_rule_img"
                    style="@style/my_truckinn_img_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/break_rule_icon" />

                <TextView
                    style="@style/my_truckinn_page_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/my_break_rule_img"
                    android:text="@string/break_rule" />

                <ImageView
                    style="@style/my_truckinn_img_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <RelativeLayout
                style="@style/my_truckinn_relative"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <ImageView
                    android:id="@+id/latest_notice_img"
                    style="@style/my_truckinn_img_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/latest_notice_icon" />

                <TextView
                    style="@style/my_truckinn_page_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/latest_notice_img"
                    android:text="@string/latest_notice" />

                <ImageView
                    style="@style/my_truckinn_img_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <include layout="@layout/right_arrow" />

            <RelativeLayout
                style="@style/my_truckinn_relative"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/feedback_img"
                    style="@style/my_truckinn_img_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/feedback_icon" />

                <TextView
                    style="@style/my_truckinn_page_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/feedback_img"
                    android:text="@string/feedback" />

                <ImageView
                    style="@style/my_truckinn_img_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <include layout="@layout/right_arrow" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>