<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c8c8c8"
    tools:context=".MainPagerActivity" >

    <RelativeLayout
        android:id="@+id/home_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/title_bk"
        android:minHeight="48dp" >

        <TextView
            style="@style/contact_page_title_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:layout_alignParentLeft="true"
            android:text="@string/sign_in" />

        <TextView
            style="@style/contact_page_title_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/cur_location" />
    </RelativeLayout>

    <ScrollView
        android:scrollbars="none"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_title" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:id="@+id/pagerLayout"
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:background="#ffffff" >

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:id="@+id/point_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#44777777"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp" >
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pagerLayout"
                android:background="@color/white"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="8dp" >

                <!-- 卡友圈 -->

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/truckcircle_bk" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:orientation="vertical" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:scaleType="centerCrop"
                            android:src="@drawable/truckcircle" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/friend_circle"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </RelativeLayout>
                <!-- 找卡友 -->

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/find_friend_bk" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:orientation="vertical" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:scaleType="centerCrop"
                            android:src="@drawable/find_friend" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/find_friend"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </RelativeLayout>
                <!-- 在路上 -->

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/in_lu_bk" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:orientation="vertical" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:scaleType="centerCrop"
                            android:src="@drawable/in_lu" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/in_road"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <com.heqinghqocsh.viewpagerandtabhost.widget.MyGridView
                android:id="@+id/gridView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:horizontalSpacing="2dp"
                android:numColumns="4"
                android:verticalSpacing="2dp" />
            <!-- 加气站 加油站 加水站 更多 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:layout_below="@id/gridView"
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal" >

                <LinearLayout
                    style="@style/home_page_selector"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/gas_station" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gas_station_str" />
                </LinearLayout>

                <View
                    android:layout_width="2dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:background="#c3c3c3" />

                <LinearLayout
                    style="@style/home_page_selector"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/water_station" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/water_station_str" />
                </LinearLayout>

                <View
                    android:layout_width="2dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:background="#c3c3c3" />

                <LinearLayout
                    style="@style/home_page_selector"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/gasoline_station" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gasoline_station_str" />
                </LinearLayout>

                <View
                    android:layout_width="2dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:background="#c3c3c3" />

                <LinearLayout
                    style="@style/home_page_selector"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/more" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_str" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>